packages/typ/tests/fixtures/diagnostics/0225_adt_record_pattern_annotation_mismatch_09.ml.expected
File "0225_adt_record_pattern_annotation_mismatch_09.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0225_adt_record_pattern_annotation_mismatch_09 is not a valid module name.

File "0225_adt_record_pattern_annotation_mismatch_09.ml", line 1, characters 31-35:
1 | type rec_iota = { depth : int; done : bool }
                                   ^^^^
Error: Syntax error
