packages/typ/tests/fixtures/diagnostics/0225_adt_record_pattern_annotation_mismatch_09.ml
type rec_iota = { depth : int; done : bool }
let { depth = (iota : bool); done = other_iota } =
  { depth = 8; done = true }
